# Savvyteam

./: README.md
.github/workflows/: build.yml
flowers_shop/: CMakeLists.txt
flowers_shop/includes/: database.h
flowers_shop/tests/: test_auth.cpp  test_database.cpp  test_utils.cpp
